force-app/main/default/objects/Merge_Field_Mapping__mdt/Merge_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Merge Field Mapping</label>
    <pluralLabel>Merge Field Mappings</pluralLabel>
</CustomObject>