force-app/main/default/objects/Merge_Field_Mapping__mdt/fields/Merge_Field__c.field-meta.xml
<CustomField>
    <fullName>Merge_Field__c</fullName>
    <label>Merge Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>