force-app/main/default/objects/Merge_Field_Mapping__mdt/fields/Priority_Order__c.field-meta.xml
<CustomField>
    <fullName>Priority_Order__c</fullName>
    <label>Priority Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>